--- a/style.css
+++ b/style.css
@@ -1,16 +1,28 @@
-.row  {
-    width: 25%;
-    margin-left: auto;
-    left: auto;
-    right: auto;
+.board {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+
+  transform: translate(-50%, -50%);
+  text-align: center;
+  vertical-align: middle;
+  line-height: 90px;
 }
 
-.col {
-    border: 1px solid #eee;
-    text-align: center;
-    line-height: 10px;
-    font-size: 28px;
-    background-color: tomato;
-    color: white;
-    padding: 0;
+.boggle-row {
+  display: inline-flex;
+  flex-direction: row;
+}
+
+.box {
+  background-color: #bbdefb;
+  width: 100px;
+  height: 100px;
+  padding: 5px;
+  margin: 5px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.test {
+  clear: both;
 }
