--- a/style.css
+++ b/style.css
@@ -1,10 +1,12 @@
 .board {
   text-align: center;
   vertical-align: middle;
-  line-height: 90px;
+  /* line-height: 90px; */
   width: 440px;
   margin: auto;
   margin-top: 50px;
+  font-family: 'Caudex', serif;
+  font-size: 18px;
 }
 
 .boggle-row {
@@ -14,9 +16,20 @@
 
 .box {
   background-color: #bbdefb;
+  line-height: 90px;
   width: 100px;
   height: 100px;
   padding: 5px;
   margin: 5px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+#new-board-button {
+  display: flex;
+  justify-content: center;
+  margin: 0 auto;
+  margin-top: 20px;
+  background-color: #2962ff;
+  font-family: 'Caudex', serif;
+
 }
