pixed double words bug

--- a/style.css
+++ b/style.css
@@ -81,7 +81,7 @@ body {
 
 #correct-words {
   font-size: 30px;
-  font-family: 'Kranky', cursive;
+  font-family: 'Pacifico', cursive;
 }
 
 #timer {
