--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ body {
 }
 
 #correct-words {
-  font-size: 40px;
+  font-size: 50px;
   font-family: 'Pacifico', cursive;
   color: #ff70a6;
 }
@@ -127,7 +127,7 @@ body {
 }
 
 #high-scores-header {
-  font-size: 40px;
+  font-size: 50px;
   font-family: 'Pacifico', cursive;
   color: #ff70a6;
   text-align: center;
@@ -140,4 +140,15 @@ th {
 
 #inputBox {
 	background-color: #f3e5f5;
+}
+
+#high-scores-table {
+  font-size: 20px;
+}
+
+#game-over {
+  display: flex;
+  justify-content: center;
+  font-size: 50px;
+  color: #ff9770;
 }
