--- a/style.css
+++ b/style.css
@@ -55,7 +55,9 @@ body {
   text-align: center;
   vertical-align: middle;
   margin: 6px;
-  background-color: #70d6ff;
+  background-color: transparent !important;
+  border-color: #70d6ff;
+  font-size: 20px;
 }
 
 #word-input {
@@ -94,7 +96,7 @@ body {
   display: flex;
   justify-content: center;
   flex-direction: row;
-
+  color: rgb(221,80,89);
   font-size: 40px;
   font-family: 'Pacifico', cursive;
 }
@@ -137,9 +139,11 @@ th {
   text-align: center;
 }
 
-
 #inputBox {
-	background-color: #f3e5f5;
+  border-color: #ea80fc;
+  font-weight: bold;
+  font-size: 20px;
+  text-align: center;
 }
 
 #high-scores-table {
@@ -150,5 +154,5 @@ th {
   display: flex;
   justify-content: center;
   font-size: 50px;
-  color: #ff9770;
+  color: rgb(221,80,89);
 }
